--- a/MVC1,2 복습/src/main/resources/static/html/addForm.html
+++ b/MVC1,2 복습/src/main/resources/static/html/addForm.html
@@ -17,7 +17,7 @@
     <form action="item.html" method="post">
         <div>
             <label for="itemName">상품명</label>
-            <input type="text" id="itemName" name="itemName" class="formcontrol"
+            <input type="text" id="itemName" th:object="${form}" name="itemName" class="formcontrol"
                    placeholder="이름을 입력하세요">
         </div>
         <div>
